--- a/WebTools/WebTools.csproj
+++ b/WebTools/WebTools.csproj
@@ -30,9 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
-      <HintPath>..\..\FourspaceGroup\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\FourspaceGroup\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -52,10 +51,12 @@
     <Compile Include="Http\Authorization\AuthorizationTokenRequestModifier.cs" />
     <Compile Include="Http\Authorization\IAuthorizationTokenProvider.cs" />
     <Compile Include="Http\HttpApiClient.cs" />
+    <Compile Include="Http\HttpClientFactory.cs" />
     <Compile Include="Http\HttpResponseException.cs" />
     <Compile Include="Http\IApiClient.cs" />
     <Compile Include="Http\IHttpRequestModifier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\JsonUtil.cs" />
     <Compile Include="Util\UriUtil.cs" />
   </ItemGroup>
   <ItemGroup>
